# meshcli

./: Makefile  README.md  pyproject.toml
meshcli/: ble_scan.py  cli.py  connection.py  discover.py  list_nodes.py  scan_ble.py
meshctl/: __init__.py  discover.py  ping.py  traceroute.py
tests/: test_cli.py  test_discover.py  test_list_nodes.py  test_scan_ble.py
